# Apache License 2.0

# This file is for local development and CI only
# For distribution builds, see bindings/python/tools/python/pyproject.toml.in

[project]
name = "open-space-toolkit-astrodynamics-dev"
version = "0.0.0"
description = "Development environment for Open Space Toolkit Astrodynamics"
requires-python = ">=3.9"

# No runtime dependencies - this is not for distribution

[project.optional-dependencies]
dev = [
	"ipython",
	"black[jupyter]",
]

[tool.black]
line-length = 90
